crates/monochange_integration_tests/tests/snapshots/auto_discover_patterns__empty-include-invalid-exclude.snap
---
source: crates/monochange_integration_tests/tests/auto_discover_patterns.rs
expression: stderr
---
error[config.invalid]: [ecosystems.go.auto_discover].exclude contains invalid glob pattern `modules/[`: Pattern syntax error near position 8: invalid range pattern
  command: monochange config
  help: Check `monochange.toml` and the command arguments, then rerun the command.
