crates/monochange_integration_tests/tests/snapshots/auto_discover_patterns__invalid-exclude.snap
---
source: crates/monochange_integration_tests/tests/auto_discover_patterns.rs
expression: stderr
---
error[config.invalid]: [ecosystems.npm.auto_discover].exclude contains invalid glob pattern `packages/[`: Pattern syntax error near position 9: invalid range pattern
  command: monochange config
  help: Check `monochange.toml` and the command arguments, then rerun the command.
